# pytest-easy-addoption

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  README.md  README.rst  codecov.yml  mypy.ini  setup.cfg  setup.py
.github/workflows/: cov.yml  lint.yml  test.yml
_mypy_easy_addoption_plugin/: plugin.py
_pytest_easy_addoption/: __init__.py  config_holder.py  plugin.py
doc/: en.rst
easy_addoption/: __init__.py  addoption.py  exceptions.py  missing.py  option.py
examples/: README.rst  conftest.py  test_example.py
pytest_easy_addoption/: addoption.py  missing.py  option.py  types.py
tests/: conftest.py  test_register.py
tests/acceptance/: test_addoption.py  test_append_count.py  test_inheritance.py  test_option.py
tests/mypy/: test_mypy.py
tests/unit/: test_addoption.py  test_config_holder.py  test_missing.py  test_option.py
