[metadata]
name = pytest-easy-addoption
description = pytest-easy-addoption: Easy way to work with pytest addoption
long_description = file: README.md
project_urls =
    Source=https://github.com/uriyyo/pytest-easy-addoption
    Tracker=https://github.com/uriyyo/pytest-easy-addoption/issues

author = Yurii Karabas

license = MIT license
license_file = LICENSE
keywords = test
classifiers =
    License :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    pytest_easy_addoption

python_requires = >=3.6

[options.entry_points]
pytest11 =
    pytest-easy-addoption = pytest_easy_addoption.plugin
